# handlers

./: .travis.yml  BUILD.bazel  CHANGELOG.md  Makefile  README.md  WORKSPACE  ctx.go  ctx_test.go  example_test.go  go.mod  go.sum  gzip.go  gzip_test.go  ignore_test.go  lib.go  lib_noslog.go  lib_noslog_test.go  lib_slog.go  lib_slog_test.go  lib_test.go  logger.go  logger_noslog.go  logger_noslog_test.go  logger_slog.go  logger_slog_test.go  noctx.go  noctx_test.go  push.go  regex_handler.go  regex_handler_test.go
.github/: dependabot.yml
.github/workflows/: ci.yml
Godeps/: Godeps.json
testdata/: README.md
