load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test")

go_prefix("github.com/kevinburke/handlers")

go_library(
    name = "go_default_library",
    srcs = [
        "ctx.go",
        "gzip.go",
        "lib.go",
        "logger.go",
        "regex_handler.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_inconshreveable_log15//:go_default_library",
        "@com_github_inconshreveable_log15//term:go_default_library",
        "@com_github_kevinburke_rest//:go_default_library",
        "@com_github_mattn_go_colorable//:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "ctx_test.go",
        "gzip_test.go",
        "lib_test.go",
        "regex_handler_test.go",
    ],
    library = ":go_default_library",
    deps = ["@com_github_satori_go_uuid//:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    deps = [":go_default_library"],
)
