load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library", "go_test")

gazelle(
    name = "gazelle",
    prefix = "github.com/kevinburke/handlers",
)

go_library(
    name = "go_default_library",
    srcs = [
        "ctx.go",
        "gzip.go",
        "lib.go",
        "logger.go",
        "regex_handler.go",
    ],
    importpath = "github.com/kevinburke/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_inconshreveable_log15//:go_default_library",
        "@com_github_inconshreveable_log15//term:go_default_library",
        "@com_github_kevinburke_go_uuid//:go_default_library",
        "@com_github_kevinburke_rest//:go_default_library",
        "@com_github_mattn_go_colorable//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "ctx_test.go",
        "gzip_test.go",
        "lib_test.go",
        "regex_handler_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/kevinburke/handlers",
    deps = ["@com_github_kevinburke_go_uuid//:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/handlers_test",
    deps = [":go_default_library"],
)
